--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,28 +1,2 @@
-steps:
-  - name: 'gcr.io/cloud-builders/docker'
-    entrypoint: 'bash'
-    args:
-      - '-c'
-      - 'docker pull gcr.io/$PROJECT_ID/appcicd:latest || exit 0'
-      - 'build'
-      - '-t'
-      - 'gcr.io/$PROJECT_ID/appcicd:latest'
-      - '-t'
-      - 'gcr.io/$PROJECT_ID/appcicd:$COMMIT_SHA'
-      - '--cache-from'
-      - 'gcr.io/$PROJECT_ID/appcicd:latest'
-      - 'push'
-      - 'gcr.io/$PROJECT_ID/appcicd'
-
-  - name: 'gcr.io/cloud-builders/gcloud'
-    args:
-      - 'run'
-      - 'deploy'
-      - 'web_app'
-      - '--image'
-      - 'gcr.io/$PROJECT_ID/appcicd:latest'
-      - '--region'
-      - 'us-central1'
-      - '--platform'
-      - 'managed'
-      - '--allow-unauthenticated'
+runtime: custom
+env: flex
